# ex-autogen

./: .devcontainer.json  .gitignore  pyproject.toml
autogenex/: agent.py  amazon.py  coding1.py  open_ai_assistant.py  stockgain.py  tool_use.py  tools.py
autogenex/agents/: CodingAgents.py
autogenex/configs/: __init__.py  code_execution_config.py  llm_configs.py
autogenex/prompts/: SystemMessages.md  SystemMessages.py  ThoughtProcess.py  __init__.py
docs/: env.md  jupyter and code.md
notebooks/: agent101.ipynb
